--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=465
-spring.mail.username=bootsdaBuc14@gmail.com
-spring.mail.password=5trongPa55word
+spring.mail.username=testingprojects55@gmail.com
+spring.mail.password=StrongPa55word
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.enable=true
